Psr0 and No output allowed

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "autoload-dev": {
         "psr-4": {
             "Slam\\PHPUnit\\Tests\\": "tests/"
-        }
+        },
+        "classmap": ["tests/TestAsset/ValidPsr0/"]
     }
 }
