--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,14 @@ sudo: false
 matrix:
   fast_finish: true
   include:
-    - php: 7.0
-      env: CS_CHECK=1
     - php: 7.1
-      env: CODE_COVERAGE=1
+      env: CS_CHECK=1
     - php: 7.2
-      env: COMPOSER_FLAGS="--ignore-platform-reqs"
-    - php: nightly
-      env: COMPOSER_FLAGS="--ignore-platform-reqs"
+      env: CODE_COVERAGE=1
 
 cache:
   directories:
-    - $HOME/.composer
+    - $HOME/.composer/cache
 
 install: wget -qO - https://github.com/Slamdunk/travis-scripts/raw/master/php-install.sh | sh
 
